完善边的操作

--- a/src/layouts/layout.less
+++ b/src/layouts/layout.less
@@ -1,9 +1,14 @@
 #root {
-  // min-height: 80vh;
-  // width: 100vw;
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
+  min-height: 80vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.basic-layout {
+  width: 100vw;
+  min-height: 80vh;
 }
 
 #components-layout-demo-top-side-2 .logo {
