--- a/src/pages/graphTool/index.less
+++ b/src/pages/graphTool/index.less
@@ -1,3 +1,17 @@
 .title {
   background: rgb(121, 242, 157);
 }
+
+#graph-container {
+  width: 100%;
+  height: 100%;
+
+  canvas {
+    // background-color: rgb(175, 192, 207);
+    border: 1px solid rgb(175, 192, 207)
+  }
+}
+
+article {
+  height: 100%;
+}
